# dialogue_summarization

./: .gitignore  .nsmlignore  README.md  base_main.py  finetuning.py  finetuning_trainer.py  finetunning.py  finetunning_v2.py  ge.ipynb  inference.py  make_tokenizer.py  mecab.txt  mecab_test.py  pretraining.py  pretraining_v2.py  pyproject.toml  requirements.txt  rouge.sh  setup.py  train.py
code/: datasets.py
data/: custom_dataset.py  preprocessing.py  rouge.py  utill.py
data/kodial_v2/: kodial.test.summary  kodial.validation.summary
fairseq.egg-info/: SOURCES.txt  top_level.txt
fairseq_cli/: train.py
for_mrc_server/: preprocessing.py  train.py
jo_nyuk/: dataset.py
ko_dial/: inference_demo.py  inference_kodial.py  inference_restapi.py  kodial_binarize.sh  kodial_build_dict.py  kodial_build_dict.sh  kodial_data_align.py  kodial_fastbpe.sh  kodial_preprocess.sh  kodial_rouge.py  kodial_tokenizer.py  kodial_train.sh  rough.sh  sentencepiece_train.py  test_build_dict.py
mainprocess/: base_main.py
models/: bart.py  notag-vocab.txt  toeknizers.py  train_utill.py
notebook/: EDA.ipynb  data_v1.ipynb
nsml_setting/: nsml.py
old/: BART_test.ipynb  eda.py  finetuning_trainer.py  finetunning.py  finetunning_v2.py  inference.py  inference_temp.py  inference_v2.py  make_tokenizer.py  pretraining_v2.py
orig/: corpus.7z
preds/: mecab.csv
result/: kodial.test.checkpoint_best.0225  kodial.test.checkpoint_best.0225.tokenized  kodial_v2_shuffle.test.summary.tokenized
train/: custom_seq_trainer.py  fine_train.py  train_utill.py
wandb/: latest-run
(+50 files in other folders)
