[tool.poetry]
name = "dialogue_summarization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "4.11"
pandas = "^1.3.4"
torch = {url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-linux_x86_64.whl"}
nsml = {git = "https://github.com/n-CLAIR/nsml-local"}
wandb = "^0.12.6"
konlpy = "^0.5.2"
mecab-python = "^1.0.0"
tweepy = "3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
